Rewrite downloader using virtual threads (#702)